--- a/Lab4EDI_1C18/Lab4EDI_1C18/Views/Carga/Index2.cshtml
+++ b/Lab4EDI_1C18/Lab4EDI_1C18/Views/Carga/Index2.cshtml
@@ -28,7 +28,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.valor)
             </td>
-            <td></td>
+            <td>
+                @Html.ActionLink("Cambiar estado de estampita", "Edit", new { id = item.Nombre })                
+            </td>
         </tr>
     }
 
