--- a/Lab4EDI_1C18/Lab4EDI_1C18/Views/Carga/Faltantes.cshtml
+++ b/Lab4EDI_1C18/Lab4EDI_1C18/Views/Carga/Faltantes.cshtml
@@ -4,7 +4,8 @@
     ViewBag.Title = "Faltantes";
 }
 
-<h2>Faltantes</h2>
+<h2>Faltantes</h2><br />
+<h3>Borrar de esta lista y se agrega auto a la de coleccionadas</h3>
 
 <table class="table">
     <tr>
@@ -20,7 +21,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item)
             </td>
-            <td></td>
+            <td>
+                @Html.ActionLink("Agregar al album", "Delete", new { id = item })                
+            </td>
         </tr>
     }
 
