Imagenes y apariencias de toda la aplicacion (Imagenes y Archivos de Prueba van aqui)

--- a/Lab4EDI_1C18/Lab4EDI_1C18/Views/Carga/Create2.cshtml
+++ b/Lab4EDI_1C18/Lab4EDI_1C18/Views/Carga/Create2.cshtml
@@ -11,6 +11,11 @@
     <br />
     <input type="submit" value="Subir" />
     <span style="color:green">@ViewBag.Message</span><br />
+    <span style="color:red">@ViewBag.Message1</span><br />
+
+    <div id="foto">
+        <img src="@Url.Content("~/Images/trofeo.jpg")" width="500" height="300" />
+    </div>
 }
 <br />
 <br />
