--- a/Lab4EDI_1C18/Lab4EDI_1C18/Views/Home/Contact.cshtml
+++ b/Lab4EDI_1C18/Lab4EDI_1C18/Views/Home/Contact.cshtml
@@ -5,13 +5,12 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Fabian Alvarez 1070117<br />
+    Erick Contreras 1009017<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Lab 4 ED1
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    
 </address>
